force-app/main/default/objects/aecm__Resource__c/aecm__Resource__c.object-meta.xml
<CustomObject>
    <description>Container for a Tempest Resource information and related skills. Also used in an assignment relationship with a project resource.</description>
    <label>Resource</label>
    <nameField>
        <displayFormat>RS-{MM}{YY}{0000}</displayFormat>
        <label>Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>