force-app/main/default/objects/aecm__Resource__c/fields/aecm__Active__c.field-meta.xml
<CustomField>
    <fullName>aecm__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>