force-app/main/default/objects/aecm__Resource__c/fields/aecm__Available_Hours_Capacity__c.field-meta.xml
<CustomField>
    <fullName>aecm__Available_Hours_Capacity__c</fullName>
    <formula>/* Calculate total capacity based on a 40 hour wee x 52 weeks*/
(2080 * aecm__Utilization__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Resource capacity based on a 40 hour work week by 52 weeks.</inlineHelpText>
    <label>Available Hours Capacity</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>