force-app/main/default/objects/aecm__Resource__c/fields/aecm__Capacity_Weeks__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capacity_Weeks__c</fullName>
    <formula>aecm__Available_Hours_Capacity__c /40</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>