force-app/main/default/objects/aecm__Resource__c/fields/aecm__First_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__First_Name__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>