force-app/main/default/objects/aecm__Resource__c/fields/aecm__Import_ID__c.field-meta.xml
<CustomField>
    <fullName>aecm__Import_ID__c</fullName>
    <label>Import ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>