force-app/main/default/objects/aecm__Resource__c/fields/aecm__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>