force-app/main/default/objects/aecm__Resource__c/fields/aecm__Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Resource_Name__c</fullName>
    <formula>aecm__First_Name__c + &quot; &quot; +  aecm__Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>