force-app/main/default/objects/aecm__Resource__c/fields/aecm__Type__c.field-meta.xml
<CustomField>
    <fullName>aecm__Type__c</fullName>
    <label>Primary Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aecm__Resource_Type</valueSetName>
    </valueSet>
</CustomField>