force-app/main/default/objects/aecm__Resource__c/fields/aecm__Utilization__c.field-meta.xml
<CustomField>
    <fullName>aecm__Utilization__c</fullName>
    <inlineHelpText>Percentage of utilization for this resource for project work.</inlineHelpText>
    <label>Utilization</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>