force-app/main/default/objects/aecm__Resource__c/listViews/aecm__Active_Resources.listView-meta.xml
<ListView>
    <fullName>aecm__Active_Resources</fullName>
    <columns>aecm__Resource_Name__c</columns>
    <columns>aecm__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Resources</label>
</ListView>