force-app/main/default/objects/aecm__Resource__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Resource_Name__c</columns>
    <columns>aecm__Type__c</columns>
    <columns>aecm__Level__c</columns>
    <columns>aecm__Utilization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>